--- a/jenkins-pod.yaml
+++ b/jenkins-pod.yaml
@@ -11,7 +11,7 @@ spec:
   - name: kaniko
     image: gcr.io/kaniko-project/executor:debug
     command:
-    - cat
+    - sleep
     tty: true
     volumeMounts:
     - name: kaniko-secret
