--- a/jenkins-pod.yaml
+++ b/jenkins-pod.yaml
@@ -12,6 +12,8 @@ spec:
     image: gcr.io/kaniko-project/executor:debug
     command:
     - sleep
+    args:
+    - 30m
     tty: true
     volumeMounts:
     - name: kaniko-secret
