--- a/jenkins-pod.yaml
+++ b/jenkins-pod.yaml
@@ -11,9 +11,7 @@ spec:
   - name: kaniko
     image: gcr.io/kaniko-project/executor:v1.6.0-debug
     command:
-    - sleep
-    args:
-    - 30m
+    - cat
     tty: true
     volumeMounts:
     - name: kaniko-secret
