--- a/jenkins-pod.yaml
+++ b/jenkins-pod.yaml
@@ -13,7 +13,7 @@ spec:
   - name: kaniko
     image: gcr.io/kaniko-project/executor:debug
     command:
-    - cat $STACKLOG_PATH
+    - cat
     tty: true
     volumeMounts:
     - name: kaniko-cache
