--- a/jenkins-pod.yaml
+++ b/jenkins-pod.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 spec:
-  serviceAccount: jenkins-admin
+  serviceAccount: jenkins
   containers:
   - name: shell
     image: alpine
