--- a/jenkins-pod.yaml
+++ b/jenkins-pod.yaml
@@ -11,7 +11,7 @@ spec:
       - 30m
     tty: true
   - name: kaniko
-    image: gcr.io/kaniko-project/executor:debug
+    image: kubespheredev/kubectl:latest-arm64
     command:
     - cat
     tty: true
