--- a/kaniko-pod.yaml
+++ b/kaniko-pod.yaml
@@ -6,8 +6,8 @@ spec:
   containers:
   - name: kaniko
     image: gcr.io/kaniko-project/executor:latest 
-    args: ["--context=git://github.com/jagyas/service:0.0.1",
-            "--destination=jagyas/service",
+    args: ["--context=git://github.com/jagyas/service",
+            "--destination=jagyas/service:0.0.1",
             "--cache=true",
             "--cache-copy-layers",
             "--cache-repo=jagyas/cache"]
