--- a/kaniko-pod.yaml
+++ b/kaniko-pod.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: kaniko
+  "labels": {
+    "pod" : "kaniko"
+  }
 spec:
   containers:
   - name: kaniko
